--- a/css/classPosition/flexbox-challenge.css
+++ b/css/classPosition/flexbox-challenge.css
@@ -21,6 +21,10 @@ body {
 
 /* CSS Code */
 
+header h1 {
+  text-align: center;
+}
+
 .pokemon-list {
   display: flex;
   flex-direction: column;
@@ -28,6 +32,7 @@ body {
   text-align: center;
   justify-content: space-evenly;
   align-items: center;
+  margin: 0 5vw;
 }
 
 .pokemon{
@@ -35,17 +40,28 @@ body {
   border-radius: 10px;
   background-color: #86da86;
   margin-bottom: 2vh;
-  max-width: 300px;
+  max-width: 304px;
+  padding: 1vh 2vw;
 }
 
-.pokemon__id {
+.pokemon__container {
   display: flex;
   background-color: #b0f3b0;
   border-radius: inherit;
-  padding: 1vh 0;
+  flex-flow: wrap;
+  margin-bottom: 1vh;
+  padding: 0;
 }
 
-.pokemon__title, .pokemon__number {
+.pokemon__container.pokemon__container_main {
+  padding: 1vh 1vw;
+}
+
+.pokemon__container.pokemon__container_secondary .pokemon__title{
+  padding: 0;
+}
+
+.pokemon__attribute_background_white {
   background-color: white;
   border-radius: 10px;
   margin: 0 1vw;
@@ -72,17 +88,55 @@ body {
 }
 
 .pokemon__picture {
-  max-width: 250px;
+  max-width: 28rem;
+  max-height: 28rem;
   background-color: white;
   border-radius: inherit;
   padding: 1.5rem;
+  margin: auto;
+  margin-top: 1vh;
 }
 
 .pokemon__picture img{
   width: 100%;
 }
 
+.pokemon__title .pokemon__title_secondary{
+  font-size: 1.5rem;
+  width: 100%;
+  margin-bottom: 1vh;
+}
+
+.pokemon__attribute.pokemon__attribute_type {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding: 1vh 1vw;
+  margin: auto;
+}
+
+.pokemon__attribute {
+  margin: auto 1vh;
+  font-size: 1.2rem;
+}
+
+.pokemon__attribute_type .pokemon__attribute{
+  color: white;
+  background: gray;
+  border-radius: .2rem;
+  padding: .2rem;
+}
+
+.pokemon__attribute.pokemon__attribute_type_grass {
+  background-color: #78C850;
+}
+
+.pokemon__attribute.pokemon__attribute_type_poison {
+  background-color: #A040A0;
+}
+
 .pokemon__attributes {
   list-style: none;
   padding: 0;
+  margin: 1vh;
 }
