--- a/css/9classPosition/flexbox-challenge.css
+++ b/css/9classPosition/flexbox-challenge.css
@@ -32,17 +32,25 @@ header h1 {
   text-align: center;
   justify-content: space-evenly;
   align-items: center;
-  margin: 0 5vw;
+ 
 }
 
 .pokemon{
   border: 2px solid black;
   border-radius: 10px;
-  margin-bottom: 2vh;
   max-width: 304px;
-  padding: 1vh 2vw;
+  padding: 0.4rem 0.6rem;
+  margin: 0 5vw;
+  margin-bottom: 2vh;
 }
 
+@media all and (min-width: 650px) {
+  .pokemon {
+    margin: 0 0 1vh 0;
+  }
+}
+
+/* Background Colors */
 .pokemon.pokemon_background_green {
   background-color: #86da86;
 }
@@ -59,6 +67,7 @@ header h1 {
   background-color: #F8D030;
 }
 
+/* Border Colors */
 .pokemon.pokemon_border_purple {
   border-color: purple;
 }
@@ -83,6 +92,10 @@ header h1 {
   padding: 0;
 }
 
+/* Container Styles */
+
+/* Background Container Colors */
+
 .pokemon__container.pokemon__container_background_green {
   background-color: #b0f3b0;
 }
@@ -99,8 +112,10 @@ header h1 {
   background-color: #FAE078;
 }
 
+/* Container Measures */
+
 .pokemon__container.pokemon__container_main {
-  padding: 1vh 1vw;
+  padding: 0.6rem 0.3rem;
 }
 
 .pokemon__container.pokemon__container_secondary .pokemon__title{
@@ -110,7 +125,7 @@ header h1 {
 .pokemon__attribute_background_white {
   background-color: white;
   border-radius: 10px;
-  margin: 0 1vw;
+  margin: 0 0.3rem;
 }
 
 .pokemon__title {
@@ -118,13 +133,21 @@ header h1 {
   flex-flow: row wrap;
   justify-content: space-evenly;
   align-items: center;
-  padding: 2vw;
-  flex: 2;
+  padding: .2rem;
+  flex: 4;
   font-size: .8rem;
 }
 
 .pokemon__title h2, .pokemon__title h3 , .pokemon__number h2 {
   margin: auto;
+}
+
+.pokemon__title.pokemon__title_block {
+  flex-flow: column;
+}
+
+.pokemon__title_block_long {
+  flex: 6
 }
 
 .pokemon__number {
@@ -133,13 +156,18 @@ header h1 {
   font-size: 1.6rem;
 }
 
+.pokemon__number h2 {
+  font-size: 2rem;
+  padding: 0 .5rem;
+}
+
 .pokemon__picture {
   display: flex;
   background-color: white;
   border-radius: inherit;
-  padding: 1vh 3vw;
-  margin: 1vh 1vw;
-  margin-top: 1vh;
+  padding: 0.6rem 0.9rem;
+  margin: 0 0.3rem;
+  margin-top: 0.6rem;
   width: 100%;
 }
 
@@ -238,4 +266,11 @@ header h1 {
   background-color: orangered;
   font-size: 1.3rem;
   font-weight: bold;
+}
+
+@media all and (min-width: 360px) {
+  .pokemon-list {
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
 }
