--- a/css/10classDisplay/challenge-layout-1/style.css
+++ b/css/10classDisplay/challenge-layout-1/style.css
@@ -23,7 +23,7 @@ body {
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 
-.site-header {
+.site-header, footer {
   background-color: #491a11;
 }
 
@@ -124,4 +124,27 @@ body {
 
 .header__reference {
   margin-left: 2rem;
+}
+
+footer {
+  color: white;
+  text-align: center;
+  padding: 2rem 0;
+}
+
+footer span {
+  font-size: 2rem;
+}
+
+footer span:not(:first-child) {
+  margin-left: 2rem;
+}
+
+footer span:first-child::after {
+  margin-left: 2rem;
+  content: "♟";
+}
+
+footer span a:visited {
+  color: white
 }
