--- a/responsiveDesign/layoutShifter/style-challenge.css
+++ b/responsiveDesign/layoutShifter/style-challenge.css
@@ -23,10 +23,12 @@ html {
   /* :root references to html, i.e. the whole file */
   --light-blue: #84cbde;
   --dark-blue: #4887a6;
+  --blue-shadow: 0px 0px 8px 1px var(--dark-blue);
 }
 
 body {
   font-family: "Alegreya", serif;
+  background-color: black;
 }
 
 .container,
@@ -42,7 +44,7 @@ body {
 }
 
 .header h1 {
-  width: 50%;
+  width: 100%;
   text-align: center;
   color: var(--light-blue);
   font-style: italic;
@@ -50,25 +52,129 @@ body {
 }
 
 .main-menu {
-  width: 50%;
+  width: 100%;
 }
 
 .main-menu ul {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
 }
 
-.main-menu ul li {
+.main-menu ul a {
+  width: 30%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  color: black;
+  text-decoration: none;
+}
+
+.main-menu ul a:last-child {
+  width: 40%;
+}
+
+.main-menu ul a li {
   list-style: none;
-  width: calc(50% - 1rem);
+  width: 100%;
   text-align: center;
   margin: 0.5rem;
   padding: 0.5rem;
   background-color: var(--light-blue);
-  box-shadow: 3px 3px 8px 1px var(--dark-blue);
-  font-size: 3.5vw;
+  box-shadow: var(--blue-shadow);
+  font-size: 2rem;
   font-weight: 700;
+}
+
+.top-readings {
+  width: 100%;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 20rem;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1rem;
+  position: relative;
+}
+
+.hero > * {
+  margin: 0.5rem 0;
+  text-align: center;
+  color: var(--light-blue);
+}
+
+.hero h2 {
+  font-size: 7vw;
+}
+
+.hero h3 {
+  font-size: 5vw;
+}
+
+.author-name {
+  font-size: 1.2rem;
+}
+
+.hero--featured {
+  border: solid 2px var(--light-blue);
+}
+
+.hero__background::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  filter: brightness(0.25);
+  z-index: -1;
+}
+
+.hero__background--solo-leveling::before {
+  background: no-repeat center/cover
+    url("https://images.alphacoders.com/106/thumb-1920-1066532.png");
+}
+
+.hero__background--goh::before {
+  background: no-repeat center/cover
+    url("https://i1.wp.com/www.thegeeklygrind.com/wp-content/uploads/2020/07/god-of-high-school-banner-.png");
+}
+
+.hero__background--lore-olympus::before {
+  background: no-repeat center/cover
+    url("https://nerdbot.com/wp-content/uploads/2019/10/Lore-Olympus.jpg");
+}
+
+.button {
+  border: none;
+  padding: 1rem 2rem;
+  background: var(--light-blue);
+  box-shadow: var(--blue-shadow);
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: black;
+  line-height: 1;
+  cursor: pointer;
+  transition: background 250ms ease-in-out, transform 150ms ease;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+.button:hover,
+.button:focus {
+  background: var(--dark-blue);
+  color: white;
+}
+
+.button:focus {
+  outline: 1px solid #fff;
+  outline-offset: -4px;
+}
+
+.button:active {
+  transform: scale(0.99);
 }
 
 .c1,
